// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Payment View should render correctly 1`] = `
<View
  cardList={Object {}}
  checkbalanceValueInfo={Object {}}
  className=""
  creditCardList={Object {}}
  deleteModalMountedState={false}
  giftCardList={Object {}}
  labels={
    Object {
      "common": Object {},
      "giftCard": "Payment",
      "paymentGC": Object {},
    }
  }
  onDeleteCard={Object {}}
  onGetBalanceCard={[Function]}
  setDefaultPaymentMethod={[Function]}
  setDeleteModalMountState={false}
  setDeleteModalMountedState={false}
  setUpdateModalMountState={false}
  setUpdateModalMountedState={false}
  updateModalMountedState={false}
  venmoCardList={Object {}}
>
  <ScrollViewMock
    keyboardShouldPersistTaps="handled"
    showsVerticalScrollIndicator={false}
  >
    <Styled(Text)>
      <Styled(BodyCopy)
        accessibilityText=""
        dataLocator=""
        fontSize="fs16"
        fontWeight="extrabold"
        margin={null}
        numberOfLines={null}
        text="lbl_payment_heading"
        textDecoration={null}
      />
    </Styled(Text)>
    <Styled(View) />
    <Styled(OffersSection)
      labels={
        Object {
          "common": Object {},
          "giftCard": "Payment",
          "paymentGC": Object {},
        }
      }
    />
    <Styled(Cards)
      addBtnLabel="lbl_payment_addBtn"
      cardImage={
        Object {
          "testUri": "../../../src/assets/images/credit-card.png",
        }
      }
      cardList={Object {}}
      checkbalanceValueInfo={null}
      description="lbl_payment_CCEmptyDesc"
      emptyBtnLabel="lbl_payment_ccEmptyAddBtn"
      emptyLabel="lbl_payment_CCEmptyHeading"
      heading="lbl_payment_ccHeading"
      labels={
        Object {
          "common": Object {},
          "giftCard": "Payment",
          "paymentGC": Object {},
        }
      }
      onGetBalanceCard={null}
      openUpdateModal={[Function]}
      setCardHandler={[Function]}
      setDefaultPaymentMethod={[Function]}
      setSelectedCard={[Function]}
      toggleModal={[Function]}
      toggleRecaptchaModal={null}
    />
    <Styled(Cards)
      addBtnLabel="lbl_payment_addBtn"
      cardImage={
        Object {
          "testUri": "../../../src/assets/images/gift-card.png",
        }
      }
      cardList={Object {}}
      checkbalanceValueInfo={Object {}}
      description="lbl_payment_GCEmptyDesc"
      emptyBtnLabel="lbl_payment_GCEmptyAddBtn"
      emptyLabel="lbl_payment_GCEmptyHeading"
      heading="lbl_payment_heading"
      labels={
        Object {
          "common": Object {},
          "giftCard": "Payment",
          "paymentGC": Object {},
        }
      }
      onGetBalanceCard={[Function]}
      openUpdateModal={null}
      recaptchaToken=""
      setCardHandler={[Function]}
      setDefaultPaymentMethod={null}
      setSelectedCard={[Function]}
      toggleModal={[Function]}
      toggleRecaptchaModal={null}
    />
  </ScrollViewMock>
</View>
`;

exports[`Payment View should render correctly with cardList 1`] = `
<View
  cardList={
    Immutable.List [
      Object {
        "accountNo": "************1111",
        "addressDetails": Object {
          "addressLine1": "111 3rd Ave",
          "addressLine2": "",
          "city": "New York",
          "country": "US",
          "firstName": "new",
          "lastName": "address",
          "phone1": "9878909876",
          "state": "NY",
          "zipCode": "10003",
        },
        "billingAddressId": 160685,
        "ccBrand": "Visa",
        "ccType": "COMPASSVISA",
        "creditCardId": 73501,
        "defaultInd": false,
        "expMonth": "5 ",
        "expYear": "2024",
        "nameOnAccount": ".",
        "properties": null,
      },
    ]
  }
  checkbalanceValueInfo={Object {}}
  className=""
  creditCardList={
    Immutable.List [
      Object {
        "accountNo": "************1111",
        "addressDetails": Object {
          "addressLine1": "111 3rd Ave",
          "addressLine2": "",
          "city": "New York",
          "country": "US",
          "firstName": "new",
          "lastName": "address",
          "phone1": "9878909876",
          "state": "NY",
          "zipCode": "10003",
        },
        "billingAddressId": 160685,
        "ccBrand": "Visa",
        "ccType": "COMPASSVISA",
        "creditCardId": 73501,
        "defaultInd": false,
        "expMonth": "5 ",
        "expYear": "2024",
        "nameOnAccount": ".",
        "properties": null,
      },
    ]
  }
  deleteModalMountedState={false}
  giftCardList={
    Immutable.List [
      Object {
        "accountNo": "************1111",
        "addressDetails": Object {
          "addressLine1": "111 3rd Ave",
          "addressLine2": "",
          "city": "New York",
          "country": "US",
          "firstName": "new",
          "lastName": "address",
          "phone1": "9878909876",
          "state": "NY",
          "zipCode": "10003",
        },
        "billingAddressId": 160685,
        "ccBrand": "Visa",
        "ccType": "COMPASSVISA",
        "creditCardId": 73501,
        "defaultInd": false,
        "expMonth": "5 ",
        "expYear": "2024",
        "nameOnAccount": ".",
        "properties": null,
      },
    ]
  }
  labels={
    Object {
      "common": Object {},
      "paymentGC": Object {},
      "paymentHeading": "Payment",
    }
  }
  onDeleteCard={Object {}}
  onGetBalanceCard={[Function]}
  setDefaultPaymentMethod={[Function]}
  setDeleteModalMountState={false}
  setDeleteModalMountedState={false}
  setUpdateModalMountState={false}
  setUpdateModalMountedState={false}
  showNotification="success"
  updateModalMountedState={false}
  venmoCardList={Object {}}
>
  <ScrollViewMock
    keyboardShouldPersistTaps="handled"
    showsVerticalScrollIndicator={false}
  >
    <Styled(Text)>
      <Styled(BodyCopy)
        accessibilityText=""
        dataLocator=""
        fontSize="fs16"
        fontWeight="extrabold"
        margin={null}
        numberOfLines={null}
        text="lbl_payment_heading"
        textDecoration={null}
      />
    </Styled(Text)>
    <Styled(View) />
    <Styled(OffersSection)
      labels={
        Object {
          "common": Object {},
          "paymentGC": Object {},
          "paymentHeading": "Payment",
        }
      }
    />
    <Styled(Cards)
      addBtnLabel="lbl_payment_addBtn"
      cardImage={
        Object {
          "testUri": "../../../src/assets/images/credit-card.png",
        }
      }
      cardList={
        Immutable.List [
          Object {
            "accountNo": "************1111",
            "addressDetails": Object {
              "addressLine1": "111 3rd Ave",
              "addressLine2": "",
              "city": "New York",
              "country": "US",
              "firstName": "new",
              "lastName": "address",
              "phone1": "9878909876",
              "state": "NY",
              "zipCode": "10003",
            },
            "billingAddressId": 160685,
            "ccBrand": "Visa",
            "ccType": "COMPASSVISA",
            "creditCardId": 73501,
            "defaultInd": false,
            "expMonth": "5 ",
            "expYear": "2024",
            "nameOnAccount": ".",
            "properties": null,
          },
        ]
      }
      checkbalanceValueInfo={null}
      description="lbl_payment_CCEmptyDesc"
      emptyBtnLabel="lbl_payment_ccEmptyAddBtn"
      emptyLabel="lbl_payment_CCEmptyHeading"
      heading="lbl_payment_ccHeading"
      labels={
        Object {
          "common": Object {},
          "paymentGC": Object {},
          "paymentHeading": "Payment",
        }
      }
      onGetBalanceCard={null}
      openUpdateModal={[Function]}
      setCardHandler={[Function]}
      setDefaultPaymentMethod={[Function]}
      setSelectedCard={[Function]}
      toggleModal={[Function]}
      toggleRecaptchaModal={null}
    />
    <Styled(Cards)
      addBtnLabel="lbl_payment_addBtn"
      cardImage={
        Object {
          "testUri": "../../../src/assets/images/gift-card.png",
        }
      }
      cardList={
        Immutable.List [
          Object {
            "accountNo": "************1111",
            "addressDetails": Object {
              "addressLine1": "111 3rd Ave",
              "addressLine2": "",
              "city": "New York",
              "country": "US",
              "firstName": "new",
              "lastName": "address",
              "phone1": "9878909876",
              "state": "NY",
              "zipCode": "10003",
            },
            "billingAddressId": 160685,
            "ccBrand": "Visa",
            "ccType": "COMPASSVISA",
            "creditCardId": 73501,
            "defaultInd": false,
            "expMonth": "5 ",
            "expYear": "2024",
            "nameOnAccount": ".",
            "properties": null,
          },
        ]
      }
      checkbalanceValueInfo={Object {}}
      description="lbl_payment_GCEmptyDesc"
      emptyBtnLabel="lbl_payment_GCEmptyAddBtn"
      emptyLabel="lbl_payment_GCEmptyHeading"
      heading="lbl_payment_heading"
      labels={
        Object {
          "common": Object {},
          "paymentGC": Object {},
          "paymentHeading": "Payment",
        }
      }
      onGetBalanceCard={[Function]}
      openUpdateModal={null}
      recaptchaToken=""
      setCardHandler={[Function]}
      setDefaultPaymentMethod={null}
      setSelectedCard={[Function]}
      toggleModal={[Function]}
      toggleRecaptchaModal={null}
    />
  </ScrollViewMock>
</View>
`;

exports[`Payment View should render with showGiftCardModal 1`] = `
<View
  cardList={Object {}}
  checkbalanceValueInfo={Object {}}
  className=""
  creditCardList={Object {}}
  deleteModalMountedState={false}
  giftCardList={Object {}}
  labels={
    Object {
      "common": Object {},
      "paymentGC": Object {},
      "paymentHeading": "Payment",
    }
  }
  onDeleteCard={Object {}}
  onGetBalanceCard={[Function]}
  setDefaultPaymentMethod={[Function]}
  setDeleteModalMountState={false}
  setDeleteModalMountedState={false}
  setUpdateModalMountState={false}
  setUpdateModalMountedState={false}
  showNotification="success"
  updateModalMountedState={false}
  venmoCardList={Object {}}
>
  <ScrollViewMock
    keyboardShouldPersistTaps="handled"
    showsVerticalScrollIndicator={false}
  >
    <Styled(Text)>
      <Styled(BodyCopy)
        accessibilityText=""
        dataLocator=""
        fontSize="fs16"
        fontWeight="extrabold"
        margin={null}
        numberOfLines={null}
        text="lbl_payment_heading"
        textDecoration={null}
      />
    </Styled(Text)>
    <Styled(View) />
    <Styled(OffersSection)
      labels={
        Object {
          "common": Object {},
          "paymentGC": Object {},
          "paymentHeading": "Payment",
        }
      }
    />
    <Styled(Cards)
      addBtnLabel="lbl_payment_addBtn"
      cardImage={
        Object {
          "testUri": "../../../src/assets/images/credit-card.png",
        }
      }
      cardList={Object {}}
      checkbalanceValueInfo={null}
      description="lbl_payment_CCEmptyDesc"
      emptyBtnLabel="lbl_payment_ccEmptyAddBtn"
      emptyLabel="lbl_payment_CCEmptyHeading"
      heading="lbl_payment_ccHeading"
      labels={
        Object {
          "common": Object {},
          "paymentGC": Object {},
          "paymentHeading": "Payment",
        }
      }
      onGetBalanceCard={null}
      openUpdateModal={[Function]}
      setCardHandler={[Function]}
      setDefaultPaymentMethod={[Function]}
      setSelectedCard={[Function]}
      toggleModal={[Function]}
      toggleRecaptchaModal={null}
    />
    <Styled(Cards)
      addBtnLabel="lbl_payment_addBtn"
      cardImage={
        Object {
          "testUri": "../../../src/assets/images/gift-card.png",
        }
      }
      cardList={Object {}}
      checkbalanceValueInfo={Object {}}
      description="lbl_payment_GCEmptyDesc"
      emptyBtnLabel="lbl_payment_GCEmptyAddBtn"
      emptyLabel="lbl_payment_GCEmptyHeading"
      heading="lbl_payment_heading"
      labels={
        Object {
          "common": Object {},
          "paymentGC": Object {},
          "paymentHeading": "Payment",
        }
      }
      onGetBalanceCard={[Function]}
      openUpdateModal={null}
      recaptchaToken=""
      setCardHandler={[Function]}
      setDefaultPaymentMethod={null}
      setSelectedCard={[Function]}
      toggleModal={[Function]}
      toggleRecaptchaModal={null}
    />
    <ModalNative
      heading="lbl_payment_addGiftCard"
      inheritedStyles=""
      isOpen={true}
      isOverlay={false}
      onRequestClose={[Function]}
    >
      <Styled(View)>
        <Connect(AddGiftCardContainer)
          labels={
            Object {
              "common": Object {},
              "paymentGC": Object {},
              "paymentHeading": "Payment",
            }
          }
          toggleModal={[Function]}
        />
      </Styled(View)>
    </ModalNative>
  </ScrollViewMock>
</View>
`;
